# arbitrage-django

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Lbank.md  README.md  bitpin.md  bug_lbank.py  debug_import.py  docker-compose.yml  env.example  main.py  pyproject.toml  ramzinex-socket.md  ramzinex.md  start.sh  test.md  test_centrifuge.py  test_events.py  test_publication.py  test_ramzinex.py  test_subscription.py  wallex-socket.md  wallex.md  wallex_test.py
config/: asgi.py  settings.py
core/: admin.py  config_manager.py  consumers.py  middleware.py  models.py  redis_manager.py  routing.py  urls.py  views.py  workers.py
core/arbitrage/: __init__.py  calculator.py
core/management/commands/: migrate_configs.py  seeder.py  start_workers.py
core/migrations/: 0001_initial.py  0002_add_configuration_models.py
core/redis/: __init__.py  manager.py
core/services/: base.py  bingx.py  bitpin.py  config.py  lbank.py  mexc.py  ramzinex.py  tabdeal.py  wallex.py
core/workers/: __init__.py  manager.py
docs/: bingx.md  lbank-socket.md
staticfiles/css/: dashboard.css
staticfiles/js/: dashboard.js
templates/: base.html  index.html
templates/core/: admin_panel.html  dashboard.html
