[project]
name = "arbitrage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "daphne>=4.2.1",
    "django-ninja>=1.4.3",
    "django-redis>=6.0.0",
    "numpy>=2.3.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
    "websockets>=15.0.1",
]
