[project]
name = "arbitrage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.14",
    "centrifuge-python>=0.4.1",
    "channels>=4.2.2",
    "channels-redis>=4.2.1",
    "daphne>=4.2.1",
    "django>=5.2.4",
    "django-ninja>=1.4.3",
    "django-redis>=6.0.0",
    "django-unfold>=0.63.0",
    "numpy>=2.3.1",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "python-socketio>=5.13.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "uvloop>=0.21.0",
    "websocket-client==1.6.4",
    "websockets>=15.0.1",
]
